--- a/src/pages/App/app.scss
+++ b/src/pages/App/app.scss
@@ -6,6 +6,7 @@
 .AppMain {
     @include u1.block_display();
     max-width: 100vw;
+    min-height: calc(100vh * 15);
     background: linear-gradient(90deg, #B0F3F1 0%, #FFCFDF 100%);
 
     .AppTitle {
@@ -35,7 +36,6 @@
             width: 15%;
             height: 400px;
             border-radius: 50px;
-            background-color: #000851;
             &:not(.boy) {
                 background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
             }
@@ -46,7 +46,6 @@
                 overflow: hidden;
                 width: 30%;
                 height: auto;
-                background-color: transparent;
 
                 img {
                     position: relative;
